--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "animate.css": "^3.7.2",
     "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
+    "classlist.js": "^1.1.20150312",
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
