Add blog html component layout

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "start:ru": "ng serve --configuration=ru",
-    "build": "ng build",
-    "build:ru": "ng build --configuration=ru",
+    "start:en": "ng serve --configuration=en",
+    "build": "ng build --buildOptimizer=true --optimization=true",
+    "build:ru": "ng build --configuration=ru --buildOptimizer=true --optimization=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
