--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
+    "mongodb": "^3.5.7",
     "ng2-animate-on-scroll": "^1.1.0",
     "ng2-carousel-3d": "^0.2.1",
     "npm": "^6.11.3",
