--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^10.0.0",
     "@angular/animations": "^8.2.3",
     "@angular/cdk": "^8.1.3",
     "@angular/common": "~8.2.0",
@@ -38,26 +39,27 @@
     "classlist.js": "^1.1.20150312",
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "materialize-css": "^1.0.0",
     "mongodb": "^3.5.7",
+    "multer": "^1.4.2",
     "ng2-animate-on-scroll": "^1.1.0",
     "ng2-carousel-3d": "^0.2.1",
-    "npm": "^6.11.3",
-    "rxjs": "^6.5.3",
+    "npm": "^6.14.8",
+    "rxjs": "^6.6.2",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.2",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.2.2",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
